--- a/1_foundations/3_lab3.ipynb
+++ b/1_foundations/3_lab3.ipynb
@@ -494,21 +494,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7860\n",
-      "* To create a public link, set `share=True` in `launch()`.\n"
+      "* Running on local URL:  http://127.0.0.1:7863\n",
+      "* Running on public URL: https://f803ed9ccd15529425.gradio.live\n",
+      "\n",
+      "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://f803ed9ccd15529425.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -521,13 +523,30 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed evaluation - returning reply\n",
+      "Passed evaluation - returning reply\n",
+      "Passed evaluation - returning reply\n",
+      "Passed evaluation - returning reply\n",
+      "Passed evaluation - returning reply\n",
+      "Passed evaluation - returning reply\n",
+      "Passed evaluation - returning reply\n",
+      "Passed evaluation - returning reply\n",
+      "Passed evaluation - returning reply\n",
+      "Passed evaluation - returning reply\n",
+      "Passed evaluation - returning reply\n"
+     ]
     }
    ],
    "source": [
-    "gr.ChatInterface(chat, type=\"messages\").launch()"
+    "gr.ChatInterface(chat, type=\"messages\").launch(share=True)"
    ]
   },
   {
@@ -590,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,16 +646,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Yes, I have extensive experience working in offshore environments, primarily in the oil and gas sector. I managed international offshore drilling and completions projects, focusing on asset performance, contract management, safety, and regulatory compliance. My role included supervising drilling operations on various rigs in locations like the Gulf of Mexico, Brazil, and Equatorial Guinea. Additionally, I was involved in optimizing rig systems and adapting safety management systems to local requirements, which helped improve overall operational efficiency. If you have specific questions about my offshore experience or related topics, feel free to ask!'"
+       "\"Yes, I have extensive experience working offshore, specifically in the oil and gas industry. I managed international offshore drilling and completions projects for various companies over an 18-year period. My roles included positions such as Asset Performance Manager and Global Asset Performance Manager, where I focused on optimizing drilling operations, managing contract compliance, and ensuring safety and regulatory adherence. I've worked on projects in the Americas and had hands-on experience with drillships and semi-submersible rigs. If you have any specific questions about offshore work, feel free to ask!\""
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,16 +666,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Evaluation(is_acceptable=True, feedback='The response is great. Hugo answers the question directly and then expands upon the answer with more detail. It also fits with the persona.')"
+       "Evaluation(is_acceptable=True, feedback=\"This is a great response. It concisely answers the question and elaborates on Hugo's experience. The agent highlights key achievements and roles, demonstrating their expertise in the offshore sector. The tone is professional and inviting, and the response encourages further questions, which aligns with the goal of engaging potential clients or employers.\")"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,21 +728,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7865\n",
+      "* Running on local URL:  http://127.0.0.1:7861\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7865/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -736,17 +755,9 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed evaluation - retrying\n",
-      "This is not an acceptable response. The agent appears to be responding in a pig latin version of English. This might be unintentional, but regardless, is not helpful to the user.\n"
-     ]
     }
    ],
    "source": [
