--- a/2_openai/4_lab4.ipynb
+++ b/2_openai/4_lab4.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
@@ -75,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +107,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "In 2025, several AI agent frameworks have emerged, each offering unique capabilities for developing autonomous systems:\n",
+       "\n",
+       "- **AWS Frontier Agents**: AWS introduced \"frontier agents,\" fully autonomous, scalable, self-learning systems designed to automate various software development tasks. These include:\n",
+       "  - **Kiro Autonomous Agent**: Enhances coding by integrating with platforms like GitHub, automating tasks such as bug triaging and code coverage improvement.\n",
+       "  - **AWS Security Agent**: Focuses on software security by reviewing design documents, analyzing pull requests, and conducting penetration testing, significantly reducing testing time.\n",
+       "  - **AWS DevOps Agent**: Improves DevOps processes by mapping application resources, autonomously managing incidents, and offering optimization insights. ([itpro.com](https://www.itpro.com/software/development/aws-says-frontier-agents-are-here-and-theyre-going-to-transform-software-development?utm_source=openai))\n",
+       "\n",
+       "- **OpenAI Agents SDK**: Released in March 2025, this lightweight Python framework facilitates the creation of multi-agent workflows with comprehensive tracing and guardrails. It is compatible with over 100 different large language models (LLMs), offering:\n",
+       "  - Minimal overhead for multi-agent workflows.\n",
+       "  - Provider-agnostic compatibility.\n",
+       "  - Detailed monitoring and debugging capabilities.\n",
+       "  - Built-in safety mechanisms and behavior controls. ([jlcnews.com](https://www.jlcnews.com/post/the-best-ai-agents-in-2025-tools-frameworks-and-platforms-compared?utm_source=openai))\n",
+       "\n",
+       "- **Google Antigravity**: Announced on November 18, 2025, Google Antigravity is an AI-powered integrated development environment (IDE) designed to prioritize AI agents in software development. Built as a fork of Visual Studio Code, it supports multiple AI models, including Google's Gemini 3 Pro, and introduces an \"agent-first\" paradigm, enabling AI agents to operate with greater autonomy. ([en.wikipedia.org](https://en.wikipedia.org/wiki/Google_Antigravity?utm_source=openai))\n",
+       "\n",
+       "- **Agent Lightning**: A flexible and extensible framework that enables reinforcement learning-based training of large language models for any AI agent. It achieves decoupling between agent execution and training, allowing seamless integration with existing agents developed through various methods. ([arxiv.org](https://arxiv.org/abs/2508.03680?utm_source=openai))\n",
+       "\n",
+       "- **Cognitive Kernel-Pro**: A fully open-source, multi-module agent framework designed to democratize the development and evaluation of advanced AI agents. It systematically investigates the curation of high-quality training data for Agent Foundation Models and explores novel strategies for agent test-time reflection and voting to enhance robustness and performance. ([arxiv.org](https://arxiv.org/abs/2508.00414?utm_source=openai))\n",
+       "\n",
+       "- **Kruti**: Developed by Ola Krutrim, Kruti is a multilingual AI agent and chatbot designed to perform real-world tasks for users, such as booking taxis and ordering food, by integrating directly with various online services. It is notable for its ability to understand and respond in multiple Indian languages. ([en.wikipedia.org](https://en.wikipedia.org/wiki/Kruti?utm_source=openai))\n",
+       "\n",
+       "- **Manus**: Developed by Butterfly Effect Technology, Manus is an autonomous AI agent capable of independent reasoning, dynamic planning, and autonomous decision-making. It is designed to execute complex real-world tasks without continuous human supervision. ([en.wikipedia.org](https://en.wikipedia.org/wiki/Manus_%28AI_agent%29?utm_source=openai))\n",
+       "\n",
+       "These frameworks reflect the rapid advancements in AI agent technology, offering diverse tools for developing autonomous systems across various applications. "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "message = \"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -126,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "searches=[WebSearchItem(reason='To find the most recent developments in AI agent frameworks, including features and advancements expected in 2025.', query='latest AI agent frameworks 2025'), WebSearchItem(reason='To explore popular and emerging AI frameworks that may significantly impact the AI landscape in 2025.', query='top AI frameworks for agents 2025'), WebSearchItem(reason='To identify and compare the leading AI agents and their capabilities anticipated for 2025.', query='AI agents comparison 2025')]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "message = \"Latest AI Agent frameworks in 2025\"\n",
@@ -174,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,8 +237,8 @@
     "def send_email(subject: str, html_body: str) -> Dict[str, str]:\n",
     "    \"\"\" Send out an email with the given subject and HTML body \"\"\"\n",
     "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\") # Change this to your verified email\n",
-    "    to_email = To(\"ed.donner@gmail.com\") # Change this to your email\n",
+    "    from_email = Email(\"hfvaldez@precisionlinktech.com\") # Change this to your verified email\n",
+    "    to_email = To(\"hfvaldez@gmail.com\") # Change this to your email\n",
     "    content = Content(\"text/html\", html_body)\n",
     "    mail = Mail(from_email, to_email, subject, content).get()\n",
     "    sg.client.mail.send.post(request_body=mail)\n",
@@ -192,16 +247,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FunctionTool(name='send_email', description='Send out an email with the given subject and HTML body', params_json_schema={'properties': {'subject': {'title': 'Subject', 'type': 'string'}, 'html_body': {'title': 'Html Body', 'type': 'string'}}, 'required': ['subject', 'html_body'], 'title': 'send_email_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x00000232DC95BA60>, strict_json_schema=True, is_enabled=True)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "send_email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,9 +389,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting research...\n",
+      "Planning searches...\n",
+      "Will perform 3 searches\n",
+      "Searching...\n",
+      "Finished searching\n",
+      "Thinking about report...\n",
+      "Finished writing report\n",
+      "Writing email...\n",
+      "Email sent\n",
+      "Hooray!\n"
+     ]
+    }
+   ],
    "source": [
     "query =\"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -383,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
